--- a/Sistema/style.css
+++ b/Sistema/style.css
@@ -1,1 +1,17 @@
-@import url('https://fonts.googleapis.com/css2?family=Kode+Mono:wght@400..700&family=Sarala:wght@400;700&display=swap')
+@import url('https://fonts.googleapis.com/css2?family=Kode+Mono:wght@400..700&family=Sarala:wght@400;700&display=swap');
+
+*{
+
+    padding: 0;
+    margin: 0;
+    border: 0;
+    box-sizing: border-box;
+    /*O box-sizing com o valor border-box faz com que o navegador não calcule a dimensão de um elemento somando bordas e margens com altura e largura.*/
+}
+
+body{
+
+    font-family: "Sarala", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
